frontend/src/css/quasar.variables.scss
// Quasar SCSS (& Sass) Variables
// --------------------------------------------------
// To customize the look and feel of this app, you can override
// the Sass/SCSS variables found in Quasar's source Sass/SCSS files.

// Check documentation for full list of Quasar variables

// Your own variables (that are declared here) and Quasar's own
// ones will be available out of the box in your .vue/.scss/.sass files

// It's highly recommended to change the default colors
// to match your app's branding.
// Tip: Use the "Theme Builder" on Quasar's documentation website.

// $dark: #1d1d1d;
// $dark-page: #121212;
// $primary: #1976d2;
// $secondary: #26a69a;
// $accent: #9c27b0;

$dark: #121214;
$dark-page: #1a1a1e;
$input: #222327;
$border: #26272b;
$highlight: #2c2c30;

$primary: #7289da;
$secondary: #424549;
$accent: #747f8d;

$positive: #21ba45;
$negative: #e00025;
$info: #31ccec;
$warning: #f2c037;

